--- a/src/app/modules/admin/income/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/modules/admin/income/components/delete-dialog/delete-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title class="mb-0">Delete Category</h2>
+<h2 mat-dialog-title class="mb-0">Delete Category test</h2>
 <mat-dialog-content class="mat-typography py-3 overflow-hidden">
     <p class="text-[1rem]">Are you sure you want to delete?</p>
 
