--- a/src/@fuse/components/navigation/vertical/components/collapsable/collapsable.component.html
+++ b/src/@fuse/components/navigation/vertical/components/collapsable/collapsable.component.html
@@ -48,7 +48,7 @@
 
         <!-- Arrow -->
         <mat-icon
-            class="fuse-vertical-navigation-item-arrow text-white icon-size-4"
+            class="fuse-vertical-navigation-item-arrow text-textColor icon-size-4"
             [svgIcon]="'heroicons_solid:chevron-right'"
         ></mat-icon>
     </div>
