--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,8 +4,8 @@
 /* ----------------------------------------------------------------------------------------------------- */
 
 :root {
-    --myAccent: #863a6f;
-    --accentHover: #62224e;
+    --myAccent: #6fb8ff;
+    --accentHover: #3588ce;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -70,7 +70,7 @@ table {
 
 body.light .mat-header-cell {
     color: #000;
-    background-color: #f1f5f9;
+    background-color: #d9edff;
 }
 
 th.mat-header-cell,
