--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -8,7 +8,7 @@
         />
         <mat-icon
             *ngIf="!showAvatar || !user.avatar"
-            class="text-white"
+            class="text-textColor"
             [svgIcon]="'heroicons_outline:user-circle'"
         ></mat-icon>
         <!-- <span
