--- a/src/app/modules/admin/accounts/components/show-dialog/show-dialog.component.html
+++ b/src/app/modules/admin/accounts/components/show-dialog/show-dialog.component.html
@@ -1,58 +1,147 @@
-<h2 mat-dialog-title class="mb-0">Account Details</h2>
-<mat-dialog-content
-    class="mat-typography py-3 sm:overflow-hidden overflow-y-auto"
->
-    <div
-        class="flex flex-wrap items-center mx-auto w-fit justify-start gap-10 mt-4"
-        *ngIf="response"
+<!-- <div class="relative">
+    <h2 mat-dialog-title class="mb-0 text-center">Account Details</h2>
+    <mat-dialog-content
+        class="mat-typography py-3 sm:overflow-hidden overflow-y-auto"
     >
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">
-                Account Holder Name
-            </p>
-            <p>{{ response.accountName }}</p>
-        </div>
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">
-                Account Number
-            </p>
-            <p>{{ response.accountNo }}</p>
-        </div>
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">IFSC Code</p>
-            <p>{{ response.ifscCode }}</p>
-        </div>
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">Bank Name</p>
-            <p>{{ response.bankName }}</p>
-        </div>
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">
-                Account Type
-            </p>
-            <p>{{ response.accountType }}</p>
-        </div>
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">
-                Created Date
-            </p>
-            <p>{{ response.createdAt | date }}</p>
-        </div>
-        <div class="flex flex-col items-start">
-            <p class="font-semibold text-[1.1rem] text-myAccent">
-                Account Balance
-            </p>
-            <p>{{ response.runningBalance | currency : "INR" }}</p>
-        </div>
-    </div>
-
-    <mat-dialog-actions align="end" class="flex gap-4 items-center">
-        <button
-            class="bg-myAccent text-white border border-myAccent hover:bg-accentHover transition rounded px-4 py-2"
-            [mat-dialog-close]="true"
-            cdkFocusInitial
+        <div
+            class="flex flex-wrap items-center mx-auto w-fit justify-start gap-10 mt-4"
+            *ngIf="response"
         >
-            Close
-        </button>
-    </mat-dialog-actions>
-</mat-dialog-content>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Holder Name
+                </p>
+                <p>{{ response.accountName }}</p>
+            </div>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Number
+                </p>
+                <p>{{ response.accountNo }}</p>
+            </div>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    IFSC Code
+                </p>
+                <p>{{ response.ifscCode }}</p>
+            </div>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Bank Name
+                </p>
+                <p>{{ response.bankName }}</p>
+            </div>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Type
+                </p>
+                <p>{{ response.accountType }}</p>
+            </div>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Created Date
+                </p>
+                <p>{{ response.createdAt | date : "dd-MM-yyyy" }}</p>
+            </div>
+            <div class="flex flex-col items-start">
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Balance
+                </p>
+                <p>{{ response.runningBalance | currency : "INR" }}</p>
+            </div>
+        </div>
+
+        <mat-dialog-actions align="end" class="flex gap-4 items-center">
+            <button
+                class="bg-myAccent text-white border border-myAccent hover:bg-accentHover transition rounded px-4 py-2"
+                [mat-dialog-close]="true"
+                cdkFocusInitial
+            >
+                Close
+            </button>
+        </mat-dialog-actions>
+    </mat-dialog-content>
+</div> -->
+
+<div class="relative">
+    <h2 mat-dialog-title class="mb-0 text-[1.5rem] text-center">
+        Account Details
+    </h2>
+    <mat-dialog-content class="py-3 sm:overflow-hidden overflow-y-auto">
+        <div
+            *ngIf="response"
+            class="flex flex-wrap items-center mx-auto w-fit justify-center gap-4 mt-4"
+        >
+            <div
+                class="flex flex-col w-[230px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Holder Name
+                </p>
+                <p>{{ response.accountName }}</p>
+            </div>
+            <div
+                class="flex flex-col w-[225px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Number
+                </p>
+                <p>{{ response.accountNo }}</p>
+            </div>
+            <div
+                class="flex flex-col w-[225px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    IFSC Code
+                </p>
+                <p>{{ response.ifscCode }}</p>
+            </div>
+            <div
+                class="flex flex-col w-[225px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Bank Name
+                </p>
+                <p>{{ response.bankName }}</p>
+            </div>
+            <div
+                class="flex flex-col w-[225px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Type
+                </p>
+                <p>{{ response.accountType }}</p>
+            </div>
+            <div
+                class="flex flex-col w-[225px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Created Date
+                </p>
+                <p>{{ response.createdAt | date : "dd-MM-yyyy" }}</p>
+            </div>
+            <div
+                class="flex flex-col w-[225px] items-center rounded bg-[#CAE5FF] py-3 px-5 shadow-[inset_4px_4px_21px_7px_rgba(0,0,0,0.25)]"
+            >
+                <p class="font-semibold text-[1.1rem] text-myAccent">
+                    Account Balance
+                </p>
+                <p>{{ response.runningBalance | currency : "INR" }}</p>
+            </div>
+        </div>
+
+        <mat-dialog-actions>
+            <button
+                class="text-myAccent text-2xl absolute -top-2 sm:top-0 -right-2 sm:right-0"
+                [mat-dialog-close]="true"
+                cdkFocusInitial
+            >
+                <img
+                    src="assets/icons/close.svg"
+                    alt="Close"
+                    class="sm:w-[20px] sm:h-[20px] w-[18px] h-[18px]"
+                />
+            </button>
+        </mat-dialog-actions>
+    </mat-dialog-content>
+</div>
