--- a/src/app/modules/admin/expense/components/collect-dialog/collect-dialog.component.html
+++ b/src/app/modules/admin/expense/components/collect-dialog/collect-dialog.component.html
@@ -1,89 +1,3 @@
-<!-- <h2 mat-dialog-title class="mb-2">Add Payment</h2>
-<mat-dialog-content class="mat-typography mb-2">
-    <div
-        class="grid grid-cols-1 sm:grid-cols-2 w-full gap-6"
-        *ngFor="let form of forms"
-    >
-
-
-        <div class="flex flex-col gap-2">
-            <label class="font-medium" for="amount"
-                >Amount <span class="text-red-600">*</span></label
-            >
-            <input
-                id="amount"
-                type="number"
-                placeholder="Enter Amount"
-                class="border border-myAccent p-2 rounded"
-                [(ngModel)]="form.amount"
-            />
-        </div>
-
-        <div class="flex flex-col gap-2">
-            <label for="account" class=""
-                >Account <span class="text-red-600">*</span></label
-            >
-            <mat-form-field class="w-full mt-0">
-                <mat-select
-                    #clubs
-                    matInfix
-                    disableOptionCentering
-                    placeholder="Select Account"
-                >
-                    <mat-option
-                        *ngFor="let account of accounts"
-                        [value]="account.id"
-                        >{{ account.name }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-
-        <div class="flex flex-col gap-2">
-            <label id="payment-mode" class=""
-                >Payment Mode <span class="text-red-600">*</span></label
-            >
-            <mat-form-field class="w-full mt-0">
-                <mat-select
-                    #clubs
-                    matInfix
-                    disableOptionCentering
-                    placeholder="Select Payment Mode"
-                >
-                    <mat-option
-                        *ngFor="let mode of paymentMode"
-                        [value]="mode.id"
-                        >{{ mode.name }}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-
-        <mat-icon
-            (click)="addForm()"
-            class="w-[45px] h-[45px] mt-[1.4rem] cursor-pointer text-myAccent transition hover:bg-myAccent rounded-full hover:text-white"
-            svgIcon="heroicons_outline:plus-circle"
-        ></mat-icon>
-    </div>
-</mat-dialog-content>
-<mat-dialog-actions align="end" class="flex gap-4 items-center mt-8">
-    <button
-        class="border border-myAccent text-myAccent bg-transparent rounded px-4 py-2"
-        mat-dialog-close
-    >
-        Cancel
-    </button>
-    <button
-        class="bg-myAccent text-white border border-myAccent hover:bg-accentHover transition rounded px-4 py-2"
-        [mat-dialog-close]="true"
-        cdkFocusInitial
-    >
-        Add
-    </button>
-</mat-dialog-actions> -->
-
-<!-- new -->
-
 <h2 mat-dialog-title class="mb-2">Add Payment</h2>
 
 <mat-dialog-content class="mat-typography mb-2">
@@ -190,13 +104,13 @@
 
 <mat-dialog-actions align="end" class="flex gap-4 items-center mt-8">
     <button
-        class="border border-myAccent text-myAccent bg-transparent rounded px-4 py-2"
+        class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded bg-backgroundColor justify-between transition-all flex items-center gap-2"
         mat-dialog-close
     >
         Cancel
     </button>
     <button
-        class="bg-myAccent text-white border border-myAccent hover:bg-accentHover transition rounded px-4 py-2"
+        class="px-10 text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
         [mat-dialog-close]="true"
         cdkFocusInitial
     >
