--- a/src/app/modules/admin/expense/components/expense-categories/expense-categories.component.html
+++ b/src/app/modules/admin/expense/components/expense-categories/expense-categories.component.html
@@ -31,8 +31,9 @@
                 type="search"
                 name="incomeCategory-search"
                 id="incomeCategory-search"
+                (keyup)="searchAccount($event)"
                 placeholder="Search Category"
-                class="px-4 py-2 rounded caret-myAccent"
+                class="px-4 py-2 w-full rounded caret-myAccent"
             />
 
             <mat-icon
@@ -46,9 +47,30 @@
                 [rangePicker]="picker"
                 placeholder="Select Date"
             >
-                <input matStartDate placeholder="Start date" />
-                <input matEndDate placeholder="End date" />
+                <input
+                    matStartDate
+                    placeholder="Start date"
+                    [(ngModel)]="getCategoryModal.startDate"
+                    (dateChange)="dateFilter()"
+                />
+                <input
+                    matEndDate
+                    placeholder="End date"
+                    [(ngModel)]="getCategoryModal.endDate"
+                    (dateChange)="dateFilter()"
+                />
             </mat-date-range-input>
+
+            <mat-icon
+                matDatepickerToggleIcon
+                class="cursor-pointer"
+                (click)="clearDate()"
+                *ngIf="
+                    getCategoryModal.startDate != null &&
+                    getCategoryModal.endDate != null
+                "
+                >clear</mat-icon
+            >
 
             <mat-datepicker-toggle
                 class="text-myAccent w-7"
@@ -59,225 +81,16 @@
         </mat-form-field>
 
         <button
-            class="bg-myAccent px-4 text-white py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover justify-between transition-all flex items-center gap-2"
-            (click)="openAddDialog()"
+            class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
+            (click)="addCategory()"
         >
-            <p class="">Add Expense category</p>
-            <mat-icon
+            <p class="font-semibold">Add Expense category</p>
+            <!-- <mat-icon
                 class="text-white w-[24px] h-[24px] px-0"
                 svgIcon="heroicons_outline:plus"
-            ></mat-icon>
+            ></mat-icon> -->
         </button>
     </div>
-
-    <!-- Table -->
-    <!-- <div class="subpixel-antialiased py-4">
-        <div class="container space-y-8 text-md mx-auto">
-            <div class="space-y-2">
-                <div
-                    class="bg-white shadow-lg hover:shadow-xl rounded-md overflow-hidden"
-                >
-                    <table
-                        class="table text-center sm:text-left table-auto w-full leading-normal"
-                    >
-                        <thead
-                            class="uppercase text-black font-bold bg-[#F1F5F9]"
-                        >
-                            <tr class="hidden sm:table-row">
-                                <th class="text-left p-3">
-                                    <p>SN</p>
-                                </th>
-                                <th class="text-left p-3">
-                                    <p>Category Name</p>
-                                </th>
-                                <th class="text-right p-3">
-                                    <p>Actions</p>
-                                </th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody class="flex-1 sm:flex-none">
-                            <tr
-                                v-for="(person, index) in persons"
-                                :key="index"
-                                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-                            >
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >SN</label
-                                    >
-                                    <p class="">1</p>
-                                </td>
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Category Name</label
-                                    >
-                                    <p class="flex items-center gap-2">
-                                        <span
-                                            ><img
-                                                class="w-[24px]"
-                                                src="../../../../../../assets/images/salary.png"
-                                                alt="Salaries"
-                                        /></span>
-                                        Salaries
-                                    </p>
-                                </td>
-                                <td class="p-1 sm:p-3 sm:text-right">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Actions</label
-                                    >
-                                    <div
-                                        class="flex gap-2 justify-center sm:justify-end"
-                                    >
-                                        <button>
-                                            <mat-icon
-                                                matTooltip="Edit Category"
-                                                class="text-green-600"
-                                                svgIcon="mat_outline:edit"
-                                            ></mat-icon>
-                                        </button>
-                                        <button>
-                                            <mat-icon
-                                                matTooltip="Delete Category"
-                                                (click)="openDeleteDialog()"
-                                                class="text-red-600"
-                                                svgIcon="mat_outline:delete"
-                                            ></mat-icon>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr
-                                v-for="(person, index) in persons"
-                                :key="index"
-                                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-                            >
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >SN</label
-                                    >
-                                    <p class="">2</p>
-                                </td>
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Category Name</label
-                                    >
-                                    <p class="flex items-center gap-2">
-                                        <span
-                                            ><img
-                                                class="w-[24px]"
-                                                src="../../../../../../assets/images/utilities.png"
-                                                alt="Utilities"
-                                        /></span>
-                                        Utilities
-                                    </p>
-                                </td>
-                                <td class="p-1 sm:p-3 sm:text-right">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Actions</label
-                                    >
-                                    <div
-                                        class="flex gap-2 justify-center sm:justify-end"
-                                    >
-                                        <button>
-                                            <mat-icon
-                                                matTooltip="Edit Category"
-                                                class="text-green-600"
-                                                svgIcon="mat_outline:edit"
-                                            ></mat-icon>
-                                        </button>
-                                        <button>
-                                            <mat-icon
-                                                matTooltip="Delete Category"
-                                                (click)="openDeleteDialog()"
-                                                class="text-red-600"
-                                                svgIcon="mat_outline:delete"
-                                            ></mat-icon>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr
-                                v-for="(person, index) in persons"
-                                :key="index"
-                                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-                            >
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >SN</label
-                                    >
-                                    <p class="">3</p>
-                                </td>
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Category Name</label
-                                    >
-                                    <p class="flex items-center gap-2">
-                                        <span
-                                            ><img
-                                                class="w-[24px]"
-                                                src="../../../../../../assets/images/rent.png"
-                                                alt="Utilities"
-                                        /></span>
-                                        Rent
-                                    </p>
-                                </td>
-                                <td class="p-1 sm:p-3 sm:text-right">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Actions</label
-                                    >
-                                    <div
-                                        class="flex gap-2 justify-center sm:justify-end"
-                                    >
-                                        <button>
-                                            <mat-icon
-                                                matTooltip="Edit Category"
-                                                class="text-green-600"
-                                                svgIcon="mat_outline:edit"
-                                            ></mat-icon>
-                                        </button>
-                                        <button>
-                                            <mat-icon
-                                                matTooltip="Delete Category"
-                                                (click)="openDeleteDialog()"
-                                                class="text-red-600"
-                                                svgIcon="mat_outline:delete"
-                                            ></mat-icon>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-
-                    <mat-paginator
-                        class="sm:absolute sm:inset-x-0 sm:bottom-0 border-b sm:border-t sm:border-b-0 z-10 bg-gray-50 dark:bg-transparent"
-                        [pageSizeOptions]="[5, 10, 25, 100]"
-                        [showFirstLastButtons]="true"
-                    ></mat-paginator>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- Angular Table -->
     <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
@@ -286,13 +99,12 @@
             [dataSource]="dataSource"
             class="mat-elevation-z8 w-full"
         >
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
@@ -302,7 +114,7 @@
                     <div class="flex items-center gap-2">
                         <img
                             class="w-[24px]"
-                            [src]="element.imgUrl"
+                            [src]="url + '/' + element.image_url"
                             [alt]="element.categoryName"
                         />
                         <span>{{ element.categoryName }}</span>
@@ -316,20 +128,25 @@
                 </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
-                        <button matTooltip="Edit Category">
-                            <mat-icon
-                                class="text-green-600"
-                                svgIcon="mat_outline:edit"
-                            ></mat-icon>
+                        <button
+                            matTooltip="Edit Category"
+                            (click)="editCategory(element)"
+                        >
+                            <img
+                                src="assets/icons/edit.svg"
+                                alt="Edit"
+                                class="w-[24px] h-[24px] cursor-pointer ml-5"
+                            />
                         </button>
                         <button
-                            (click)="openDeleteDialog()"
+                            (click)="openDeleteDialog(element.id)"
                             matTooltip="Delete Category"
                         >
-                            <mat-icon
-                                class="text-red-600"
-                                svgIcon="mat_outline:delete"
-                            ></mat-icon>
+                            <img
+                                src="assets\images\trash-can.png"
+                                alt="Delete"
+                                class="w-[24px] h-[24px] cursor-pointer"
+                            />
                         </button>
                     </div>
                 </td>
@@ -338,5 +155,11 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </section>
