--- a/src/app/modules/admin/expense/components/payment-dialog/payment-dialog.component.html
+++ b/src/app/modules/admin/expense/components/payment-dialog/payment-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title class="mb-0">Receipt</h2>
+<h2 mat-dialog-title class="mb-0">Payments</h2>
 <mat-dialog-content class="py-3 overflow-y-scroll">
     <table
         class="table text-center sm:text-left table-auto w-full leading-normal"
