--- a/src/app/modules/admin/income/components/add-income/add-income.component.html
+++ b/src/app/modules/admin/income/components/add-income/add-income.component.html
@@ -170,9 +170,9 @@
             </div>
         </div>
         <button
-            type="button"
+            type="submit"
             (click)="openCollectDialog()"
-            class="py-2 px-10 rounded text-white self-end transition-all hover:bg-accentHover bg-myAccent w-fit"
+            class="py-2 px-10 rounded font-semibold text-textColor shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] self-end transition-all hover:bg-accentHover bg-darkAccent w-fit"
         >
             Add Income
         </button>
