--- a/src/app/modules/admin/reports/components/accounts-statement/accounts-statement.component.html
+++ b/src/app/modules/admin/reports/components/accounts-statement/accounts-statement.component.html
@@ -141,164 +141,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             ></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
-
-        <!-- <button
-            class="bg-myAccent px-4 text-white py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover justify-between transition-all flex items-center gap-2"
-            (click)="addAccount()"
-        >
-            <p class="">Add Account</p>
-            <mat-icon
-                class="text-white w-[24px] h-[24px] px-0"
-                svgIcon="heroicons_outline:plus"
-            ></mat-icon>
-        </button> -->
     </div>
-
-    <!-- Table -->
-    <!-- <div class="subpixel-antialiased py-4 w-full">
-        <div class="container space-y-8 text-md mx-auto">
-            <div class="space-y-2">
-                <div
-                    class="bg-white shadow-lg hover:shadow-xl rounded-md overflow-hidden"
-                >
-                    <table
-                        class="table text-center sm:text-left table-auto w-full leading-normal"
-                    >
-                        <thead
-                            class="uppercase text-center text-black font-bold bg-[#F1F5F9]"
-                        >
-                            <tr class="hidden sm:table-row space-x-10">
-                                <th class="text-left p-3">
-                                    <p>SN</p>
-                                </th>
-                                <th class="text-left p-3">
-                                    <p>Account Holder Name</p>
-                                </th>
-                                <th class="text-right p-3">
-                                    <p>Transactions</p>
-                                </th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody class="flex-1 sm:flex-none">
-                            <tr
-                                v-for="(person, index) in persons"
-                                :key="index"
-                                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-                            >
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >SN</label
-                                    >
-                                    <p class="">1</p>
-                                </td>
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Account Holder Name</label
-                                    >
-                                    <p class="">Farves Safiyudeen</p>
-                                </td>
-                                <td class="p-1 sm:p-3 sm:text-right view-trans">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Transactions</label
-                                    >
-                                    <button
-                                        (click)="viewTransactions()"
-                                        class="bg-transparent w-fit sm:mr-14 border px-2 py-1 border-myAccent rounded transition hover:bg-myAccent text-myAccent hover:text-white"
-                                    >
-                                        view
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr
-                                v-for="(person, index) in persons"
-                                :key="index"
-                                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-                            >
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >SN</label
-                                    >
-                                    <p class="">2</p>
-                                </td>
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Account Holder Name</label
-                                    >
-                                    <p class="">Mohamed Rilwan</p>
-                                </td>
-                                <td class="p-1 sm:p-3 sm:text-right view-trans">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Transactions</label
-                                    >
-                                    <button
-                                        (click)="viewTransactions()"
-                                        class="bg-transparent border sm:mr-14 px-2 py-1 border-myAccent rounded transition hover:bg-myAccent text-myAccent hover:text-white"
-                                    >
-                                        view
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr
-                                v-for="(person, index) in persons"
-                                :key="index"
-                                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-                            >
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >SN</label
-                                    >
-                                    <p class="">3</p>
-                                </td>
-                                <td class="p-1 sm:p-3">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Account Holder Name</label
-                                    >
-                                    <p class="">Abu Sufyan</p>
-                                </td>
-                                <td class="p-1 sm:p-3 sm:text-right view-trans">
-                                    <label
-                                        class="text-black uppercase font-bold sm:hidden"
-                                        for=""
-                                        >Transactions</label
-                                    >
-                                    <button
-                                        (click)="viewTransactions()"
-                                        class="bg-transparent sm:mr-14 border px-2 py-1 border-myAccent rounded transition hover:bg-myAccent text-myAccent hover:text-white"
-                                    >
-                                        view
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-
-
-                    <mat-paginator
-                        class="sm:absolute sm:inset-x-0 sm:bottom-0 border-b sm:border-t sm:border-b-0 z-10 bg-gray-50 dark:bg-transparent"
-                        [pageSizeOptions]="[5, 10, 25, 100]"
-                        [showFirstLastButtons]="true"
-                    ></mat-paginator>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- Angular Table -->
     <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
@@ -307,9 +150,6 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             [dataSource]="dataSource"
             class="mat-elevation-z8 w-full"
         >
-            <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
                 <td mat-cell *matCellDef="let element">
@@ -331,7 +171,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 <td mat-cell *matCellDef="let element" class="text-right">
                     <button
                         (click)="viewTransactions()"
-                        class="bg-transparent border px-2 py-1 border-myAccent rounded transition hover:bg-myAccent text-myAccent hover:text-white"
+                        class="shadow-[inset_4px_4px_13px_rgba(0,0,0,0.25)] px-3 py-1 bg-darkAccent rounded transition hover:bg-accentHover text-textColor"
                     >
                         View
                     </button>
