--- a/src/app/modules/admin/tax/components/add-tax/add-tax.component.html
+++ b/src/app/modules/admin/tax/components/add-tax/add-tax.component.html
@@ -54,7 +54,7 @@
         </div>
         <button
             type="submit"
-            class="py-2 px-10 rounded self-end text-white transition-all hover:bg-accentHover bg-myAccent w-fit"
+            class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2 self-end"
         >
             {{ updateFormData != undefined ? "Update Tax" : "Add Tax" }}
         </button>
