--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -81,3 +81,76 @@ td.mat-cell {
 tr.mat-header-row {
     height: 45px;
 }
+
+thead {
+    .thead {
+        font-size: 14.4px;
+        height: 56px;
+    }
+}
+
+tbody {
+    // font-size: 14px;
+
+    td {
+        height: 56px;
+    }
+
+    .td {
+        border-top: 1px solid #e4e4e4;
+    }
+}
+
+.fileover {
+    animation: shake 1s;
+    animation-iteration-count: infinite;
+    transition: all 0.3s;
+    background-color: #badeff !important;
+}
+
+/* Shake animation */
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
