--- a/src/app/modules/admin/expense/components/add-expense/add-expense.component.html
+++ b/src/app/modules/admin/expense/components/add-expense/add-expense.component.html
@@ -108,7 +108,7 @@
                     class="opacity-0 absolute z-10 w-full top-0 left-0 h-full"
                     #fileDropRef
                     id="fileDropRef"
-                    (change)="fileBrowseHandler($event.target.files)"
+                    (change)="saveImage($event)"
                 />
                 <div
                     class="flex items-center justify-center flex-col gap-4 mt-4"
