--- a/src/app/modules/admin/expense/components/payment-dialog/payment-dialog.component.html
+++ b/src/app/modules/admin/expense/components/payment-dialog/payment-dialog.component.html
@@ -1,129 +1,51 @@
 <h2 mat-dialog-title class="mb-0">Payments</h2>
 <mat-dialog-content class="py-3 overflow-y-scroll">
-    <table
-        class="table text-center sm:text-left table-auto w-full leading-normal"
-    >
-        <thead class="uppercase text-center text-black font-bold bg-[#F1F5F9]">
-            <tr class="hidden text-left sm:table-row space-x-10">
-                <th class="text-left p-3">
-                    <p>SN</p>
-                </th>
+    <!-- Angular Table -->
+    <div class="whitespace-nowrap w-full overflow-x-scroll shadow rounded-lg">
+        <table
+            mat-table
+            [dataSource]="dataSource"
+            class="mat-elevation-z8 w-full"
+        >
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef>SN</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.position }}
+                </td>
+            </ng-container>
 
-                <th class="text-left p-3">
-                    <p>Account name</p>
-                </th>
-                <th class="text-left p-3">
-                    <p>Payment Mode</p>
-                </th>
-                <th class="text-left p-3">
-                    <p>Amount</p>
-                </th>
-                <th class="text-left p-3">
-                    <p>Created Date</p>
-                </th>
+            <ng-container matColumnDef="accountName">
+                <th mat-header-cell *matHeaderCellDef>Account Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.accountName }}
+                </td>
+            </ng-container>
 
-                <th></th>
-            </tr>
-        </thead>
-        <tbody class="flex-1 sm:flex-none">
-            <tr
-                v-for="(person, index) in persons"
-                :key="index"
-                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-            >
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >SN</label
-                    >
-                    <p class="">1</p>
+            <ng-container matColumnDef="paymentMode">
+                <th mat-header-cell *matHeaderCellDef>Payment Mode</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.paymentMode }}
                 </td>
+            </ng-container>
 
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Account Name</label
-                    >
-                    <p class="">Farves</p>
+            <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef>Amount</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.amount }}
                 </td>
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Payment Mode</label
-                    >
-                    <p class="">Gpay</p>
-                </td>
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Amount</label
-                    >
-                    <p class="">250</p>
-                </td>
+            </ng-container>
 
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Created Date</label
-                    >
-                    <p class="">19/04/2023</p>
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef>Created Date</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.date }}
                 </td>
-            </tr>
-            <tr
-                v-for="(person, index) in persons"
-                :key="index"
-                class="border-t first:border-t-0 flex p-1 sm:p-3 sm:table-row flex-col w-full"
-            >
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >SN</label
-                    >
-                    <p class="">2</p>
-                </td>
+            </ng-container>
 
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Account Name</label
-                    >
-                    <p class="">Safiyudeen</p>
-                </td>
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Payment Mode</label
-                    >
-                    <p class="">Credit Card</p>
-                </td>
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Amount</label
-                    >
-                    <p class="">750</p>
-                </td>
-
-                <td class="p-1 sm:p-3">
-                    <label
-                        class="text-black uppercase font-bold sm:hidden"
-                        for=""
-                        >Created Date</label
-                    >
-                    <p class="">19/04/2023</p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+    </div>
 </mat-dialog-content>
 
 <mat-dialog-actions align="end" class="flex gap-4 items-center">
