--- a/src/app/modules/admin/tax/components/manage-tax/manage-tax.component.html
+++ b/src/app/modules/admin/tax/components/manage-tax/manage-tax.component.html
@@ -220,7 +220,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
                         <button
-                            matTooltip="Edit Category"
+                            matTooltip="Edit Tax"
                             (click)="editTax(element)"
                         >
                             <img
@@ -231,7 +231,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                         </button>
                         <button
                             (click)="openDeleteDialog(element.id)"
-                            matTooltip="Delete Category"
+                            matTooltip="Delete Tax"
                         >
                             <img
                                 src="assets\images\trash-can.png"
