--- a/src/app/modules/admin/accounts/components/manage-account/manage-account.component.html
+++ b/src/app/modules/admin/accounts/components/manage-account/manage-account.component.html
@@ -199,13 +199,13 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
 
             <ng-container matColumnDef="actions">
                 <th class="text-right" mat-header-cell *matHeaderCellDef>
-                    Actions
+                    <p class="mr-4">Actions</p>
                 </th>
                 <td mat-cell *matCellDef="let element">
-                    <div class="flex gap-2 justify-center sm:justify-end">
+                    <div class="flex gap-3 justify-end">
                         <button matTooltip="View Account">
                             <mat-icon
-                                class="text-myAccent"
+                                class="text-myAccent mt-2"
                                 svgIcon="heroicons_outline:eye"
                                 (click)="openShowDialog(element.id)"
                             ></mat-icon>
@@ -217,7 +217,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                             <img
                                 src="assets/icons/edit.svg"
                                 alt="Edit"
-                                class="w-[24px] h-[24px] cursor-pointer ml-5"
+                                class="w-[24px] h-[24px] cursor-pointer"
                             />
                         </button>
                         <button
