--- a/src/app/modules/admin/roles-and-permissions/components/manage-roles/manage-roles.component.html
+++ b/src/app/modules/admin/roles-and-permissions/components/manage-roles/manage-roles.component.html
@@ -116,7 +116,8 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 name="role-search"
                 id="role-search"
                 placeholder="Search "
-                class="px-4 py-2 rounded caret-myAccent"
+                (keyup)="searchRole($event)"
+                class="px-4 py-2 w-full rounded caret-myAccent"
             />
 
             <mat-icon
@@ -130,9 +131,30 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 [rangePicker]="picker"
                 placeholder="Select Date"
             >
-                <input matStartDate placeholder="Start date" />
-                <input matEndDate placeholder="End date" />
+                <input
+                    matStartDate
+                    placeholder="Start date"
+                    [(ngModel)]="getRoleModal.startDate"
+                    (dateChange)="dateFilter()"
+                />
+                <input
+                    matEndDate
+                    placeholder="End date"
+                    [(ngModel)]="getRoleModal.endDate"
+                    (dateChange)="dateFilter()"
+                />
             </mat-date-range-input>
+
+            <mat-icon
+                matDatepickerToggleIcon
+                class="cursor-pointer"
+                (click)="clearDate()"
+                *ngIf="
+                    getRoleModal.startDate != null &&
+                    getRoleModal.endDate != null
+                "
+                >clear</mat-icon
+            >
 
             <mat-datepicker-toggle
                 class="text-myAccent w-7"
@@ -143,7 +165,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         </mat-form-field>
 
         <button
-            (click)="goToAddRole()"
+            (click)="addRole()"
             class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
         >
             <p class="font-semibold">Add Role</p>
@@ -163,8 +185,10 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         >
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
@@ -175,17 +199,17 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="noOfUsers">
-                <th mat-header-cell *matHeaderCellDef>No of Users</th>
+            <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef>Created Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.noOfUsers }}
+                    {{ element.createdAt | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef>Date</th>
+            <ng-container matColumnDef="updatedAt">
+                <th mat-header-cell *matHeaderCellDef>Updated Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.createdAt | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
@@ -195,7 +219,10 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
-                        <button matTooltip="Edit Category">
+                        <button
+                            matTooltip="Edit Role"
+                            (click)="editRole(element.id)"
+                        >
                             <img
                                 src="assets/icons/edit.svg"
                                 alt="Edit"
@@ -203,8 +230,8 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                             />
                         </button>
                         <button
-                            (click)="openDeleteDialog()"
-                            matTooltip="Delete Category"
+                            (click)="openDeleteDialog(element.id)"
+                            matTooltip="Delete Role"
                         >
                             <img
                                 src="assets\images\trash-can.png"
@@ -219,5 +246,11 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </section>
