--- a/src/app/modules/admin/roles-and-permissions/components/manage-user/manage-user.component.html
+++ b/src/app/modules/admin/roles-and-permissions/components/manage-user/manage-user.component.html
@@ -115,8 +115,9 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 type="search"
                 name="user-search"
                 id="user-search"
+                (keyup)="searchAccount($event)"
                 placeholder="Search "
-                class="px-4 py-2 rounded caret-myAccent"
+                class="px-4 py-2 w-full rounded caret-myAccent"
             />
 
             <mat-icon
@@ -130,9 +131,30 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 [rangePicker]="picker"
                 placeholder="Select Date"
             >
-                <input matStartDate placeholder="Start date" />
-                <input matEndDate placeholder="End date" />
+                <input
+                    matStartDate
+                    placeholder="Start date"
+                    [(ngModel)]="getUserModal.startDate"
+                    (dateChange)="dateFilter()"
+                />
+                <input
+                    matEndDate
+                    placeholder="End date"
+                    [(ngModel)]="getUserModal.endDate"
+                    (dateChange)="dateFilter()"
+                />
             </mat-date-range-input>
+
+            <mat-icon
+                matDatepickerToggleIcon
+                class="cursor-pointer"
+                (click)="clearDate()"
+                *ngIf="
+                    getUserModal.startDate != null &&
+                    getUserModal.endDate != null
+                "
+                >clear</mat-icon
+            >
 
             <mat-datepicker-toggle
                 class="text-myAccent w-7"
@@ -144,6 +166,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
 
         <button
             class="px-10 border text-textColor hover:border-darkAccent border-accentHover shadow-[inset_5px_4px_19px_5px_rgba(0,0,0,0.25)] py-2 w-fit whitespace-nowrap rounded hover:bg-accentHover bg-darkAccent justify-between transition-all flex items-center gap-2"
+            (click)="addUser()"
         >
             <p class="font-semibold">Add User</p>
             <!-- <mat-icon
@@ -162,36 +185,38 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         >
             <ng-container matColumnDef="position">
                 <th mat-header-cell *matHeaderCellDef>SN</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.position }}
+                <td mat-cell *matCellDef="let element; let i = index">
+                    {{
+                        paginatorRef.pageIndex * paginatorRef.pageSize + (i + 1)
+                    }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="userName">
                 <th mat-header-cell *matHeaderCellDef>User Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.userName }}
+                    {{ element.name }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="userEmail">
                 <th mat-header-cell *matHeaderCellDef>User Email</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.userEmail }}
+                    {{ element.email }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="userRole">
                 <th mat-header-cell *matHeaderCellDef>User Role</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.userRole }}
+                    {{ element.role_name }}
                 </td>
             </ng-container>
 
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef>Date</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.date }}
+                    {{ element.createdAt | date : "dd-MM-yyyy" }}
                 </td>
             </ng-container>
 
@@ -201,7 +226,10 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                 </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
-                        <button matTooltip="Edit Category">
+                        <button
+                            matTooltip="Edit Category"
+                            (click)="editUser(element)"
+                        >
                             <!-- <mat-icon
                                 class="text-green-600"
                                 svgIcon="mat_outline:edit"
@@ -214,7 +242,7 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
                             />
                         </button>
                         <button
-                            (click)="openDeleteDialog()"
+                            (click)="openDeleteDialog(element.id)"
                             matTooltip="Delete Category"
                         >
                             <img
@@ -230,5 +258,11 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
+
+        <mat-paginator
+            #paginatorRef
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            [showFirstLastButtons]="true"
+        ></mat-paginator>
     </div>
 </section>
